--- a/.env
+++ b/.env
@@ -4,8 +4,8 @@
 port=80
 
 ## This is the Bearer authorization token.
-auth=test
+auth=code
 
 # Don't touch these.
 
-version=Development Build
+version=0.0.1
