--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dotenv": "^8.2.0",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
-    "express-ws": "^4.0.0"
+    "express-ws": "^4.0.0",
+    "node-fetch": "^2.6.1"
   },
   "author": "Two"
 }
