shh i dont want to reveal my... future project on package.json

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "reseller-panel-docker",
-  "description": "A docker files for the reseller panel.",
+  "name": "robopanel-docker",
+  "description": "A docker files for the RoboPanel.",
   "main": "index.js",
   "dependencies": {
     "dockerode": "^3.2.1",
